--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     />
   </head>
 
-  <body>
+  <body onload="myFun()">
     <!-- start loading -->
-    <div id="loading">
+    <!-- <div id="loading">
       <img src="assets/animat-rocket-color.gif" alt="loading">
-    </div>
+    </div> -->
     <!-- end loading -->
     <!-- start intro -->
     <section class="intro" id="home">
